# ft_printf

./: CMakeLists.txt  Makefile  a.out  ft_atoll.c  ft_create_flg.c  ft_doflagxo.c  ft_itoa_base.c  ft_print_c.c  ft_print_di.c  ft_print_flags.c  ft_print_o.c  ft_print_p.c  ft_print_s.c  ft_print_u.c  ft_print_x.c  ft_printf.c  ft_putchar.c  ft_putstr.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strlen.c  main.c  test.c
ft_printf/: ft_print_c.c  ft_print_di.c  ft_print_o.c  ft_print_s.c  ft_print_u.c  ft_print_x.c  ft_printf.c  ft_printhelp_s.c
includes/: ft_printf.h  libft.h
libft/: ft_memalloc.c  ft_strchr.c  ft_strjoin.c  ft_strsub.c
